syntax = "proto3";
package dk.via.dataserver.gRPC;
option csharp_namespace = "Sep3_Proto";
import "google/protobuf/any.proto";

/*
message UserProto{
  int32 id=1;
  string username =2;
  string password =3;
  string email =4;
}*/

// messages

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
}

message Request
{
  HandlerType handler = 1;
  ActionType action = 2;
  google.protobuf.Any payload = 3;
}
message Response
{
  StatusType status = 1;
  google.protobuf.Any payload = 2;
}

// services

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
}


service homogeniousService{
  rpc handleRequest(Request) returns (Response);
}

// enums

enum HandlerType
{
  HANDLER_UNKNOWN = 0;
  HANDLER_USER = 1; //maybe maybe
}

enum ActionType
{
  ACTION_UNKNOWN = 0;
  ACTION_CREATE = 1;
  ACTION_GET = 2;
  ACTION_UPDATE = 3;
  ACTION_DELETE = 4;
  ACTION_LIST = 5;
}

enum StatusType
{
  STATUS_UNKNOWN = 0;
  STATUS_OK = 1;
  STATUS_ERROR = 2;
  STATUS_INVALID_PAYLOAD = 3;
}
